# VideoApp

./: CMakeLists.txt
lib/FFmpeg/: CMakeLists.txt
src/: loadFrame.cpp  main.cpp  video_reader.cpp  video_reader.h
